--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,21 @@ services:
     networks:
       - postgres
     restart: unless-stopped
+  redis:
+    image: 'bitnami/redis:latest'
+    container_name: 'redis-cache-ecommerce'
+    environment:
+      - REDIS_PASSWORD=test123
+      - REDIS_DISABLE_COMMANDS=FLUSHDB,FLUSHALL
+    labels:
+      kompose.service.type: nodeport
+    ports:
+      - '6379:6379'
+    volumes:
+      - redis_data:/bitnami/redis
+    networks:
+      - postgres
+    restart: unless-stopped
 
 networks:
   postgres:
@@ -37,3 +52,4 @@ networks:
 volumes:
   postgres:
   pgadmin:
+  redis_data:
